<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddMoneyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/add_money_heading"
            android:textColor="@color/colorPrimary"
            android:textSize="12dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/curr_balance" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/minimum_amount"
                android:padding="14dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/add_newCard_heading"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/savedCreditCardsLv"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/addNewCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#933F44"
            android:drawableStart="@drawable/ic_baseline_credit_card_24"
            android:drawablePadding="9dp"
            android:drawableTint="#fff"
            android:text="@string/add_card"
            android:textColor="#fff" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/addAmountOfMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#933F44"
            android:drawableStart="@android:drawable/ic_input_add"
            android:drawableTint="#fff"
            android:text="@string/add_money"
            android:textColor="#fff" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>