<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PrimaryHeading"
                android:gravity="center"
                android:paddingHorizontal="50dp"
                android:text="@string/registerWelcomeText"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/firstNameInputHint"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/lastNameInputHint"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/enter_your_phone_number"
                android:inputType="number"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/enter_a_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:password="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/select_your_birthday"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:calendarTextColor="@color/colorPrimary"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:outlineAmbientShadowColor="@color/colorPrimary"
                android:outlineSpotShadowColor="@color/colorPrimary" />

            <Button
                android:id="@+id/createAccount"
                android:layout_width="116dp"
                android:layout_height="34dp"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/register_me"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>