<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cardImg"
                android:layout_width="443dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@mipmap/card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/complete_with_your_card_details"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/cardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_baseline_credit_card_24_red"
                android:drawablePadding="100dp"
                android:hint="@string/card_number_example"
                android:inputType="number"
                android:padding="20dp" />

            <EditText
                android:id="@+id/cardPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="100dp"
                android:hint="@string/card_personName"
                android:inputType="text"
                android:padding="20dp" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="20dp"
                android:hint="@string/cvv_ex"
                android:inputType="number"
                android:padding="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/expiration_date"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/expiry_years_array"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp" />

                <Spinner
                    android:id="@+id/expiry_days_array"
                    android:layout_width="140dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="30dp"
                    android:scrollbars="vertical" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

