<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdateUserDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PrimaryHeading"
                    android:gravity="center"
                    android:paddingHorizontal="50dp"
                    android:text="@string/update_your_details_below"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="30dp"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/firstNameInputHint"
                    android:padding="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/lastNameInputHint"
                    android:padding="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/enter_your_phone_number"
                    android:inputType="number"
                    android:padding="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/enter_a_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:password="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/updateAccount"
                    style="@style/ButtonRedStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/colorPrimary"
                    android:text="Update Account"
                    android:layout_height="wrap_content" />
            </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>